increases show/hide from mobile size, to prevent scrolling phone on smaller devices

--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -599,13 +599,10 @@ section.lightbox
     .phone-wrapper
         position: absolute
         margin-left: 100px
-        //position: absolute
-        //margin-left: 100px
 
     .phone-wrapper.sticky
-        //position: fixed
-        //top: 100px
         margin-top: 1px
+
 
 .video-placeholder
     display: block
@@ -618,7 +615,6 @@ section.lightbox
 
     .video-placeholder
         margin: 65px auto 55px auto
-
 
 
 // lists
@@ -968,7 +964,7 @@ table
 
 // hide from mobile devices
 
-@media screen and (max-width: 499px)
+@media screen and (max-width: 767px)
 
     .hide-from-mobile
         display: none
@@ -976,7 +972,7 @@ table
 
 // only show mobile
 
-@media screen and (min-width: 500px)
+@media screen and (min-width: 768px)
 
     .hide-from-desktop
         display: none
